# gmusic-rs

./: .gitignore  .travis.yml  Cargo.toml  README.md
examples/: album.rs  api.rs  artist.rs  devices.rs  login.rs  playlist_entries.rs  playlists.rs  search.rs  shared_playlist.rs  stream_url.rs  tracks.rs
src/: api.rs  auth.rs  auth_header.rs  error.rs  lib.rs  login.rs  token.rs
src/http/: all_playlists.rs  all_tracks.rs  device_management_info.rs  get_all_tracks.rs  image_ref.rs  login.rs  mod.rs  oauth.rs  playlist_entries.rs  settings.rs
src/models/: album.rs  all_playlists.rs  all_tracks.rs  artist.rs  device_management_info.rs  image_ref.rs  mod.rs  playlist_entries.rs  search_results.rs  shared_playlist_entries.rs
