[package]
name = "gmusic"
version = "0.1.0"
authors = ["Max Jöhnk <maxjoehnk@gmail.com>"]
edition = "2018"

[dependencies]
log = "0.4"
serde = "1"
serde_json = "1"
serde_derive = "1"
oauth2 = "3.0.0-alpha.7"
failure = "0.1"
reqwest = "0.9"
url = "1.7"
hmac = "0.7"
sha-1 = "0.8"
base64 = "0.11"

[dev-dependencies]
env_logger = "0.7"