[package]
name = "gmusic"
description = "An unofficial client library for Google Music"
version = "0.1.0"
authors = ["Max Jöhnk <maxjoehnk@gmail.com>"]
edition = "2018"
repository = "https://github.com/maxjoehnk/gmusic-rs"
readme = "README.md"
keywords = ["google-music"]
categories = ["api-bindings"]
license = "GPL-3.0"

[badges]
travis-ci = { repository = "maxjoehnk/gmusic-rs", branch = "master" }
is-it-maintained-issue-resolution = { repository = "maxjoehnk/gmusic-rs" }
is-it-maintained-open-issues = { repository = "maxjoehnk/gmusic-rs" }

[dependencies]
log = "0.4"
serde = "1"
serde_json = "1"
serde_derive = "1"
oauth2 = "3.0.0-alpha.7"
failure = "0.1"
reqwest = "0.9"
url = "1.7"
hmac = "0.7"
sha-1 = "0.8"
base64 = "0.11"

[dev-dependencies]
env_logger = "0.7"