[package]
name = "gmusic"
description = "An unofficial client library for Google Music"
version = "0.3.1"
authors = ["Max Jöhnk <maxjoehnk@gmail.com>"]
edition = "2018"
repository = "https://github.com/maxjoehnk/gmusic-rs"
readme = "README.md"
keywords = ["google-music"]
categories = ["api-bindings"]
license = "GPL-3.0"

[badges]
travis-ci = { repository = "maxjoehnk/gmusic-rs", branch = "master" }
is-it-maintained-issue-resolution = { repository = "maxjoehnk/gmusic-rs" }
is-it-maintained-open-issues = { repository = "maxjoehnk/gmusic-rs" }

[dependencies]
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
oauth2 = { version = "3.0.0-alpha.9", default-features = false, features = ["reqwest-010", "futures-03"] }
failure = "0.1"
reqwest = { version = "0.10", features = ["json"] }
url = "2.1"
hmac = "0.7"
sha-1 = "0.8"
base64 = "0.12"
tokio = { version = "0.2", features = ["sync", "fs"] }

[dev-dependencies]
env_logger = "0.7"
tokio = { version = "0.2", features = ["rt-threaded", "macros"] }
